<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_text" />

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message_text"/>

    <CheckBox
        android:id="@+id/only_send_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/only_send_title_checkbox"/>

    <Button
        android:id="@+id/send_email_button"
        android:text="@string/send_email_button"
        android:onClick="pressButton"
        style="@style/LaunchIntentButtonStyle"/>

    <Button
        android:id="@+id/launch_activity_button"
        android:text="@string/launch_activity_button"
        android:onClick="pressButton"
        style="@style/LaunchIntentButtonStyle"/>

    <Button
        android:id="@+id/launch_camera_button"
        android:text="@string/launch_camera_button"
        android:onClick="pressButton"
        style="@style/LaunchIntentButtonStyle"/>

</LinearLayout>